force-app/main/default/objects/Family_Member__c/Family_Member__c.object-meta.xml
<CustomObject>
    <label>Family Member</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>