force-app/main/default/objects/Family_Member__c/fields/Campaign_Decision__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Decision__c</fullName>
    <label>Campaign Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contact The Client</fullName>
            </value>
            <value>
                <fullName>Keep as Existing</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Remove duplicate data - Contact Path</fullName>
            </value>
            <value>
                <fullName>Remove duplicate data - sleeping profile</fullName>
            </value>
            <value>
                <fullName>Share to Internal Control</fullName>
            </value>
            <value>
                <fullName>Wait Client360</fullName>
            </value>
            <value>
                <fullName>Already cleaned duplicates</fullName>
            </value>
            <value>
                <fullName>Epsilon Modifies Personal Information</fullName>
                <isActive>false</isActive>
                <label>Epsilon Modifies Personal Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>