force-app/main/default/objects/Family_Member__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>Family_Members</relationshipName>
    <type>Lookup</type>
</CustomField>