force-app/main/default/objects/Family_Member__c/fields/Client_Decision__c.field-meta.xml
<CustomField>
    <fullName>Client_Decision__c</fullName>
    <label>Client Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Modify personal information</fullName>
            </value>
            <value>
                <fullName>Keep As Existing</fullName>
            </value>
            <value>
                <fullName>Keep As Existing - Opt Out</fullName>
            </value>
            <value>
                <fullName>Anonimize - Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>