force-app/main/default/objects/Family_Member__c/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>