force-app/main/default/objects/Family_Member__c/fields/Dream_ID__c.field-meta.xml
<CustomField>
    <fullName>Dream_ID__c</fullName>
    <label>Dream ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>