force-app/main/default/objects/Family_Member__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>Family_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>