force-app/main/default/objects/Family_Member__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10k</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>